# githouse

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
githouse/: cli.py
